Ozhaev Zaynudin Game.cpp.g++log.txt
In file included from c:\users\zainu\desktop\курс\codeblocks\mingw\include\txlib.h:1:0,
                 from C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:1:
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In function 'void MoveBall()':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:37:16: error: invalid use of non-static data member 'Pictures::Fon'
     HDC Fon  = txLoadImage ("Pictures\\Fon.bmp");
                ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:149:50: error: from this location
         txBitBlt (txDC(), 0, 50, 0, 0, Pictures::Fon);
                                                  ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:38:16: error: invalid use of non-static data member 'Pictures::Ball'
     HDC Ball = txLoadImage ("Pictures\\Ball.bmp");
                ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:169:79: error: from this location
         txAlphaBlend (txDC(), ball3 .x - 25, ball3 .y - 25, 50, 50, Pictures::Ball, 0, 0);
                                                                               ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:37:16: error: invalid use of non-static data member 'Pictures::Fon'
     HDC Fon  = txLoadImage ("Pictures\\Fon.bmp");
                ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:177:27: error: from this location
     txDeleteDC (Pictures::Fon);
                           ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:38:16: error: invalid use of non-static data member 'Pictures::Ball'
     HDC Ball = txLoadImage ("Pictures\\Ball.bmp");
                ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:178:27: error: from this location
     txDeleteDC (Pictures::Ball);
                           ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In member function 'void Ball::Physics(int*, int*, int)':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:298:50: warning: value computed is not used [-Wunused-value]
             x = W/2; vx = -10 + rand() % 20; -10 + rand() % 20;
                                                  ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In function 'void CollisionBall(Ball*, Ball*)':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:317:48: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
      double d = sqrt (Dx*Dx + Dy*Dy); if (d == 0) d = 0.01; // гипотенуза
                                                ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:328:28: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         if ((Vn1 - Vn2) == 0) Vn1 = Vn1 + 0.01;
                            ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:342:44: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         d = sqrt (Dx*Dx + Dy*Dy); if (d == 0) d=0.01;
                                            ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: At global scope:
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:386:6: warning: unused parameter 'ball' [-Wunused-parameter]
 void Maze (Ball* ball, Key plaer1, int* F4_Col)
      ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:386:6: warning: unused parameter 'plaer1' [-Wunused-parameter]
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:386:6: warning: unused parameter 'F4_Col' [-Wunused-parameter]
---------------------------------------------------------------------------------------------
[04.07.2021 11:00:50,00 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\Game> g++.exe "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp" -o "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
